alignment fixed
after i added the button, the alignment of the 3d/2d image was wonky to the left so i centred it

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,6 +95,7 @@ body {
     float: left;
     width: 33.33333%;
     padding: 20px;
+    text-align: center;
   }
   
   /* Add responsiveness - make the columns appear on top of each other instead of next to each other on small screens */
